[package]
name = "diesel_json_logic_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.37"
syn = "2.0.77"

[features]
utoipa = []

[dev-dependencies]
diesel = { version = "2.2", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
] }
