[package]
name = "diesel_json_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
diesel_json_logic_proc_macros = { path = "../diesel-json-logic-proc-macros" }
diesel_json_logic_macro_rules = { path = "../diesel-json-logic-macro-rules" }


[dev-dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2", features = [
    "postgres",
    "uuid",
    "serde_json",
    "chrono",
] }
serde_json = "1.0.116"
